<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UpdatePeopleFragment">

    <TextView
        android:id="@+id/update_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/update_name_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/update_name"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/update_name_tv" />

    <TextView
        android:id="@+id/update_age_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center_horizontal"
        android:text="@string/age"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/update_name_et" />

    <EditText
        android:id="@+id/update_age_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:autofillHints="@string/update_age"
        android:hint="@string/update_age"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/update_age_tv" />

    <Button
        android:id="@+id/save_people_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>